--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,29 @@ body {
     height: 100vh;
     margin: 0;
   }
-  
+  .flex{
+    display: flex;
+    flex-direction: column;
+  }
+  form{
+    row-gap: 20px;
+  }
+  form label{
+    display: none;
+  }
+  form button{
+    font-size: 1.2rem;
+  }
+  form input{
+    border: 2px solid rgb(161, 161, 161);
+    font-size: 1rem;
+    border-radius: 8px;
+    padding: 15px;
+    width: 300px;
+  }
   .container {
     background-color: #fff;
-    padding: 20px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
