--- a/views/dashborduser.ejs
+++ b/views/dashborduser.ejs
@@ -127,7 +127,7 @@
                     <div id="text-input" contenteditable="true"></div>
                 </div>
                 <!--Script-->
-                <script src="backend/public/js/script.js"></script>
+                <script src="/js/script.js"></script>
             </div>
         </div>
         <div class="preview">
