--- a/public/css/dashuser.css
+++ b/public/css/dashuser.css
@@ -24,9 +24,8 @@ body {
     align-items: center;
 }
 .menu {
-    width: 15%;
     height: 100vh;
- 
+ width: 225px;
     border-right: 2px solid rgb(235, 235, 235);
 }
 .noteped{
