--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -27,7 +27,7 @@
     </div>
     <h2>Your Script URL</h2>
     <p>Copy the following script URL and include it in your website:</p>
-    <code>&lt;script src="http://localhost:3000/api/script?username=<%= username %>"&gt;&lt;/script&gt;</code>
+    <code>&lt;script src="https://reviewspace.vercel.app/api/script?username=<%= username %>"&gt;&lt;/script&gt;</code>
     <br><br>
     <a href="/logout">Logout</a>
   </div>
