--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <h1>Register</h1>
-    <form action="/register" method="post">
+    <form action="/register" method="post" class="flex">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+      <input placeholder="Username" type="text" id="username" name="username" required>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input placeholder="Password" type="password" id="password" name="password" required>
       <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="/login">Login</a></p>
